# personal-ai

./: .gitignore  INDRA.spec  README.md  main_window.spec  requirements.txt  runner.py
UI/: main_window.py
UI/themes/: dark.qss  light.qss
action_executor/: ReadMe.MD  main.py
action_executor/allowlists/: applications.py  network.py  system_commands.py
action_executor/audit_logging/: audit_log.py
action_executor/constants/: limits.py  paths.py  platform.py  task_types.py
action_executor/core/: allowlist_enforcer.py  confirmation.py  dispatcher.py  output.py  validator.py
action_executor/executors/: download.py  filesystem.py  general.py  internet.py  system.py
action_executor/sandbox/: paths.py
agent_task_decomposer/: README.md
agent_task_decomposer/decomposer/: atomicity_rules.py  decomposer.py  id_strategy.py  models.py  task_types.py  validator.py
agent_task_decomposer/examples/: example_failure.json  example_multi_step.json  example_trivial.json
agent_task_decomposer/tests/: test_automicity.py  test_decomposition.py  (+1 more)
brain/: README.md  pyproject.toml
brain/src/: brain.py
brain/src/brain.egg-info/: PKG-INFO  SOURCES.txt
brain/tests/: test_brain.py
guardrail_engine_impl/: README.md  audit_logger.py  confirmation_evaluator.py  constants.py  decision_merger.py  engine.py  reasoning_layer.py  reasoning_validator.py  rule_validator.py
guardrail_engine_spec/: Architecture.md  README.md  Rules.md  Schema.json  test_cases.md
interface/: README.md  interface.py
memory_store/: README.md
skill_extractor/: README.md  pipeline.py
(+15 files in other folders)
